php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #24402 Compile Failure using --with-gettext (v. 0.12.x)
Submitted: 2003-06-30 05:58 UTC Modified: 2003-09-23 22:07 UTC
Votes:2
Avg. Score:5.0 ± 0.0
Reproduced:2 of 2 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: beckett at beckettmw dot com Assigned:
Status: Closed Package: Gettext related
PHP Version: 4.3.3, 5.0.0b1 (beta1) OS: Mac OS X/Darwin
Private report: No CVE-ID: None
 [2003-06-30 05:58 UTC] beckett at beckettmw dot com
Description:
------------
On Mac OS X 10.2.6, I compiled PHP 4.3.1 with gettext 
0.12 and GCC 3.1 (Apple v1151) just fine--no problems.

But with 4.3.2 and now again with 5.0.0b1, I get the 
following compile error when reaching gettext.c:

Compiler command that generates the error:
gcc  -Iext/gettext/ -I/dl/php-5.0.0b1/ext/gettext/ -
DPHP_ATOM_INC -I/dl/php-5.0.0b1/include -I/dl/php-
5.0.0b1/main -I/dl/php-5.0.0b1 -I/dl/php-5.0.0b1/Zend -
I/usr/local/include/libxml2 -I/usr/local/include -I/
usr/local/mysql/include  -no-cpp-precomp -I/dl/php-
5.0.0b1/TSRM  -g -O2  -c /dl/php-5.0.0b1/ext/gettext/
gettext.c -o ext/gettext/gettext.o  && echo > ext/
gettext/gettext.lo

Errors:
/dl/php-5.0.0b1/ext/gettext/gettext.c:37: 
`zif_libintl_textdomain' undeclared here (not in a 
function)
/dl/php-5.0.0b1/ext/gettext/gettext.c:37: initializer 
element is not constant
/dl/php-5.0.0b1/ext/gettext/gettext.c:37: (near 
initialization for `php_gettext_functions[0].handler')
/dl/php-5.0.0b1/ext/gettext/gettext.c:37: initializer 
element is not constant
/dl/php-5.0.0b1/ext/gettext/gettext.c:37: (near 
initialization for `php_gettext_functions[0]')
/dl/php-5.0.0b1/ext/gettext/gettext.c:38: 
`zif_libintl_gettext' undeclared here (not in a 
function)
/dl/php-5.0.0b1/ext/gettext/gettext.c:38: initializer 
element is not constant
/dl/php-5.0.0b1/ext/gettext/gettext.c:38: (near 
initialization for `php_gettext_functions[1].handler')
/dl/php-5.0.0b1/ext/gettext/gettext.c:38: initializer 
element is not constant
/dl/php-5.0.0b1/ext/gettext/gettext.c:38: (near 
initialization for `php_gettext_functions[1]')

(...and so on, one set of errors for each of the 
gettext functions).


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-09-23 22:07 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 19:00:01 2026 UTC