MFH: Fixed bug #24402 (Compile failure with gettext 0.12.x)